--- a/css/main.css
+++ b/css/main.css
@@ -1770,7 +1770,7 @@ header .header-logo a {
     width: 100%;
     height: 100%;
     background-color: #151515;
-    background-image: url(../images/hero-bg2.webp);
+    background-image: url(../images/hero-bg2.webp), url(../images/hero-bg2.jpg);
     background-repeat: no-repeat;
     background-position: center 30%;
     -webkit-background-size: cover;
